--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@ body{
 .tlt1 li:nth-child(4) {	background: #9ab6c3; }
 .tlt1 li:nth-child(5) {	background: #cddae1; }
 .tlt1 li:nth-child(6) {	background: #e5ecf0; }
-.tlt1 li:nth-child(7) {	background: #cddae1; }
-.tlt1 li:nth-child(8) {	background: #9ab6c3; }
-.tlt1 li:nth-child(9) {	background: #6891a4; }
-.tlt1 li:nth-child(10){	background: #356d86; }
+.tlt1 li:nth-child(7) {	background: #9ab6c3; }
+.tlt1 li:nth-child(8) {	background: #6891a4; }
+.tlt1 li:nth-child(9) {	background: #356d86; }
+.tlt1 li:nth-child(10){	background: #034868; }
 
 .show {
 	background: #1d1d1d;
